Fin de la documentación (logs añadidos del despliegue).